--- a/index.html
+++ b/index.html
@@ -351,7 +351,7 @@
           <div class="col-md">
             <div class="ftco-footer-widget mb-4">
               <h2 class="ftco-heading-2">DaniNutri</h2>
-              <p>Mude seus hábitos alimentares e tenha uma vida maus saudável.</p>
+              <p>Mude seus hábitos alimentares e tenha uma vida mais saudável.</p>
               <ul class="ftco-footer-social list-unstyled float-md-left float-lft mt-5">
                 <li class="ftco-animate"><a href="https://www.facebook.com/daniela.marchesini.18" target="_blank"><span class="icon-facebook"></span></a></li>
                 <li class="ftco-animate"><a href="https://www.instagram.com/danimarchesini.nutri/" target="_blank"><span class="icon-instagram"></span></a></li>
