--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <title>Daniela Marchesini - Nutricionista</title>
     <meta name="description" content="Nutricionista Daniela Marchesini. Belo Horizonte e Lagoa Santa. Contato: contato@daninutri.com.br / (31) 99644-6591. Reeducação alimentar e acompanhamento nutricional.">
     <link rel="canonical" href="http://daninutri.com.br/">
+    <link rel="shortcut icon" href="favicon.ico" />
     <meta name="robots" content="max-snippet:-1, max-image-preview:large, max-video-preview:-1">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
