--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
               </div>
             </div>
             <div class="pb-md-5">
-              <p>Sou nutricionista (CRN9 22062), graduada pela Universidade Federal de Minas Gerais (UFMG) em 2015. Em meu trabalho, me dedico a trazer sempre mais saúde para a vida das pessoas através da promoção de uma alimentação equilibrada. Estou sempre em busca de novos conhecimentos e informações, para melhor atender meus pacientes.</p>
+              <p>Sou nutricionista (CRN 22062), graduada pela Universidade Federal de Minas Gerais (UFMG) em 2015. Em meu trabalho, me dedico a trazer sempre mais saúde para a vida das pessoas através da promoção de uma alimentação equilibrada. Estou sempre em busca de novos conhecimentos e informações, para melhor atender meus pacientes.</p>
               <p>Minha paixão é ajudar as pessoas a melhorar e evoluir, dentro do que cada um almeja pra si.</p>
             </div>
           </div>
