--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
   <head>
     <title>Daniela Marchesini - Nutricionista</title>
-    <meta name="description" content="Nutricionista Daniela Marchesini. Belo Horizonte e Lagoa Santa. Contato: contato@daninutri.com.br / (31) 99644-6591. Reeducação alimentar e acompanhamento nutricional.">
-    <link rel="canonical" href="http://daninutri.com.br/">
+    <meta name="description" content="Nutricionista Daniela Marchesini. Belo Horizonte e Lagoa Santa. Contato: contato@daninutri.fit / (31) 99644-6591. Reeducação alimentar e acompanhamento nutricional.">
+    <link rel="canonical" href="http://daninutri.fit/">
     <link rel="shortcut icon" href="favicon.ico" />
     <meta name="robots" content="max-snippet:-1, max-image-preview:large, max-video-preview:-1">
     <meta charset="utf-8">
@@ -53,7 +53,7 @@
 					    </div>
 					    <div class="col-md pr-4 d-flex topper align-items-center">
 					    	<div class="icon mr-2 d-flex justify-content-center align-items-center"><span class="icon-paper-plane"></span></div>
-						    <span class="text">contato@daninutri.com.br</span>
+						    <span class="text">contato@daninutri.fit</span>
 					    </div>
 					    <div class="col-md-5 pr-4 d-flex topper align-items-center text-lg-right">
 						    <span class="text">Nutricionista</span>
@@ -267,7 +267,7 @@
             </div>
             <div class="row">
               <div class="col-md-12">
-               <p><span>Email:</span> <a href="mailto:contato@daninutri.com.br">contato@daninutri.com.br</a></p>
+               <p><span>Email:</span> <a href="mailto:contato@daninutri.fit">contato@daninutri.fit</a></p>
               </div>
             </div>
             <div class="row">
@@ -300,7 +300,7 @@
             </div>
             <div class="row">
               <div class="col-md-12">
-               <p><span>Email:</span> <a href="mailto:contato@daninutri.com.br">contato@daninutri.com.br</a></p>
+               <p><span>Email:</span> <a href="mailto:contato@daninutri.fit">contato@daninutri.fit</a></p>
               </div>
             </div>
             <div class="row">
@@ -333,7 +333,7 @@
             </div>
             <div class="row">
               <div class="col-md-12">
-               <p><span>Email:</span> <a href="mailto:contato@daninutri.com.br">contato@daninutri.com.br</a></p>
+               <p><span>Email:</span> <a href="mailto:contato@daninutri.fit">contato@daninutri.fit</a></p>
               </div>
             </div>
             <div class="row">
@@ -398,7 +398,7 @@
             	<div class="block-23 mb-3">
 	              <ul>
 	                <li><a href="tel://31996446591"><span class="icon icon-phone"></span><span class="text">(31) 99644-6591</span></a></li>
-	                <li><a href="mailto:contato@daninutri.com.br"><span class="icon icon-envelope"></span><span class="text">contato@daninutri.com.br</span></a></li>
+	                <li><a href="mailto:contato@daninutri.fit"><span class="icon icon-envelope"></span><span class="text">contato@daninutri.fit</span></a></li>
 	              </ul>
 	            </div>
             </div>
