--- a/index.html
+++ b/index.html
@@ -65,17 +65,18 @@
     </div>
     <nav class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light" id="ftco-navbar">
 	    <div class="container">
-	      <a class="navbar-brand" href="index.html"><img src="images/logo.png" alt="DaniNutri" height="50" width="78"></a>
+	      <a class="navbar-brand mouse-go-top" href="index.html"><img src="images/logo.png" alt="DaniNutri" height="50" width="78"></a>
 	      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
 	        <span class="oi oi-menu"></span> Menu
 	      </button>
 
 	      <div class="collapse navbar-collapse" id="ftco-nav">
 	        <ul class="navbar-nav ml-auto">
-	          <li class="nav-item active"><a href="index.html" class="nav-link">Home</a></li>
+	          <li class="nav-item active"><a href="#" class="nav-link mouse-go-top">Home</a></li>
             <li class="nav-item"><a href="#services" class="nav-link">Serviços</a></li>
 	          <li class="nav-item"><a href="#about" class="nav-link">Sobre</a></li>
 	          <li class="nav-item"><a href="#contact" class="nav-link">Contato</a></li>
+            <li class="nav-item"><a href="mailto:contato@daninutri.fit?subject=Agendamento de Consulta&body=Olá, tudo bem? Gostaria de agendar um consulta com a Nutri." target="_blank" class="nav-link">Agende sua Consulta</a></li>
 	        </ul>
 	      </div>
 	    </div>
@@ -267,7 +268,7 @@
             </div>
             <div class="row">
               <div class="col-md-12">
-               <p><span>Email:</span> <a href="mailto:contato@daninutri.fit">contato@daninutri.fit</a></p>
+               <p><span>Email:</span> <a href="mailto:contato@daninutri.fit?subject=Agendamento de Consulta&body=Olá, tudo bem? Gostaria de agendar um consulta com a Nutri." target="_blank">contato@daninutri.fit</a></p>
               </div>
             </div>
             <div class="row">
@@ -300,7 +301,7 @@
             </div>
             <div class="row">
               <div class="col-md-12">
-               <p><span>Email:</span> <a href="mailto:contato@daninutri.fit">contato@daninutri.fit</a></p>
+               <p><span>Email:</span> <a href="mailto:contato@daninutri.fit?subject=Agendamento de Consulta&body=Olá, tudo bem? Gostaria de agendar um consulta com a Nutri." target="_blank">contato@daninutri.fit</a></p>
               </div>
             </div>
             <div class="row">
@@ -333,7 +334,7 @@
             </div>
             <div class="row">
               <div class="col-md-12">
-               <p><span>Email:</span> <a href="mailto:contato@daninutri.fit">contato@daninutri.fit</a></p>
+               <p><span>Email:</span> <a href="mailto:contato@daninutri.fit?subject=Agendamento de Consulta&body=Olá, tudo bem? Gostaria de agendar um consulta com a Nutri." target="_blank">contato@daninutri.fit</a></p>
               </div>
             </div>
             <div class="row">
@@ -363,7 +364,7 @@
               <a href="#" class="mouse-go-top"><img src="images/logo.png" alt="DaniNutri" class="mb-xl-1" height="50" width="78"></a>
               <p>Mude seus hábitos alimentares e tenha uma vida mais saudável.</p>
               <ul class="ftco-footer-social list-unstyled float-md-left float-lft mt-5">
-                <li class="ftco-animate"><a href="https://www.facebook.com/daniela.marchesini.18" target="_blank"><span class="icon-facebook"></span></a></li>
+                <li class="ftco-animate"><a href="https://www.facebook.com/danimarchesini.nutri/" target="_blank"><span class="icon-facebook"></span></a></li>
                 <li class="ftco-animate"><a href="https://www.instagram.com/danimarchesini.nutri/" target="_blank"><span class="icon-instagram"></span></a></li>
               </ul>
             </div>
@@ -398,7 +399,7 @@
             	<div class="block-23 mb-3">
 	              <ul>
 	                <li><a href="tel://31996446591"><span class="icon icon-phone"></span><span class="text">(31) 99644-6591</span></a></li>
-	                <li><a href="mailto:contato@daninutri.fit"><span class="icon icon-envelope"></span><span class="text">contato@daninutri.fit</span></a></li>
+	                <li><a href="mailto:contato@daninutri.fit?subject=Agendamento de Consulta&body=Olá, tudo bem? Gostaria de agendar um consulta com a Nutri." target="_blank">contato@daninutri.fit</span></a></li>
 	              </ul>
 	            </div>
             </div>
