--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
             <li class="nav-item"><a href="#services" class="nav-link">Serviços</a></li>
 	          <li class="nav-item"><a href="#about" class="nav-link">Sobre</a></li>
 	          <li class="nav-item"><a href="#contact" class="nav-link">Contato</a></li>
-            <li class="nav-item"><a href="mailto:contato@daninutri.fit?subject=Agendamento de Consulta&body=Olá, tudo bem? Gostaria de agendar um consulta com a Nutri." target="_blank" class="nav-link">Agende sua Consulta</a></li>
+            <li class="nav-item"><a href="mailto:contato@daninutri.fit?subject=Agendamento de Consulta&body=Olá, tudo bem? Gostaria de agendar um consulta com a Nutri." target="_blank" class="nav-link">Agendar uma Consulta</a></li>
 	        </ul>
 	      </div>
 	    </div>
