--- a/index.html
+++ b/index.html
@@ -26,7 +26,6 @@
 
     <link rel="stylesheet" href="css/bootstrap-datepicker.css">
     <link rel="stylesheet" href="css/jquery.timepicker.css">
-
     
     <link rel="stylesheet" href="css/flaticon.css">
     <link rel="stylesheet" href="css/icomoon.css">
@@ -73,9 +72,11 @@
 	      <div class="collapse navbar-collapse" id="ftco-nav">
 	        <ul class="navbar-nav ml-auto">
 	          <li class="nav-item active"><a href="#" class="nav-link mouse-go-top">Home</a></li>
-            <li class="nav-item"><a href="#services" class="nav-link">Serviços</a></li>
-	          <li class="nav-item"><a href="#about" class="nav-link">Sobre</a></li>
-	          <li class="nav-item"><a href="#contact" class="nav-link">Contato</a></li>
+            <li class="nav-item"><a href="#sobre" class="nav-link">Sobre</a></li>
+            <li class="nav-item"><a href="#projetos" class="nav-link">Projetos</a></li>
+            <li class="nav-item"><a href="#servicos" class="nav-link">Serviços</a></li>
+            <li class="nav-item"><a href="receitas.html" class="nav-link">Receitas</a></li>
+	          <li class="nav-item"><a href="#contato" class="nav-link">Contato</a></li>
             <li class="nav-item"><a href="mailto:contato@daninutri.fit?subject=Agendamento de Consulta&body=Olá, tudo bem? Gostaria de agendar um consulta com a Nutri." target="_blank" class="nav-link">Agendar uma Consulta</a></li>
 	        </ul>
 	      </div>
@@ -158,65 +159,8 @@
       </div>
     </section>
 
-    <section id="services" class="ftco-section bg-light">
-			<div class="container">
-				<div class="row justify-content-center mb-5 pb-3">
-					<div class="col-md-7 heading-section ftco-animate text-center fadeInUp ftco-animated">
-						<h2 class="mb-4">Serviços</h2>
-					</div>
-				</div>
 
-				<div class="row no-gutters ftco-services">
-          <div class="col-md-3 text-center d-flex align-self-stretch ftco-animate">
-            <div class="media block-6 services mb-md-0 mb-4">
-              <div class="icon bg-color-1 active d-flex justify-content-center align-items-center mb-2">
-            		<span class="flaticon-diet"></span>
-              </div>
-              <div class="media-body">
-                <h3 class="heading">Reeducação Alimentar</h3>
-                <span>Modifique seus hábitos e comportamentos alimentares para obter uma vida mais saudável.</span>
-              </div>
-            </div>      
-          </div>
-          <div class="col-md-3 text-center d-flex align-self-stretch ftco-animate">
-            <div class="media block-6 services mb-md-0 mb-4">
-              <div class="icon bg-color-2 d-flex justify-content-center align-items-center mb-2">
-            		<span class="flaticon-salad"></span>
-              </div>
-              <div class="media-body">
-                <h3 class="heading">Obesidade e Emagrecimento</h3>
-                <span>Redução de gordura corporal com um acompanhamento especializado.</span>
-              </div>
-            </div>    
-          </div>
-          <div class="col-md-3 text-center d-flex align-self-stretch ftco-animate">
-            <div class="media block-6 services mb-md-0 mb-4">
-              <div class="icon bg-color-3 d-flex justify-content-center align-items-center mb-2">
-            		<span class="flaticon-award"></span>
-              </div>
-              <div class="media-body">
-                <h3 class="heading">Ganho de Massa</h3>
-                <span>Ganhe massa através de um acompanhamento nutricional específico para suas necessidades.</span>
-              </div>
-            </div>      
-          </div>
-          <div class="col-md-3 text-center d-flex align-self-stretch ftco-animate">
-            <div class="media block-6 services mb-md-0 mb-4">
-              <div class="icon bg-color-4 d-flex justify-content-center align-items-center mb-2">
-            		<span class="flaticon-customer-service"></span>
-              </div>
-              <div class="media-body">
-                <h3 class="heading">Atendimento Domiciliar</h3>
-                <span>Atendimento personalizado na sua residência, agende já sua consulta.</span>
-              </div>
-            </div>      
-          </div>
-        </div>
-			</div>
-		</section>
-
-
-    <section id="about" class="ftco-section bg-light">
+    <section id="sobre" class="ftco-section bg-light">
       <div class="container">
         <div class="row justify-content-center mb-5 pb-3">
           <div class="col-md-7 heading-section ftco-animate text-center fadeInUp ftco-animated">
@@ -232,8 +176,9 @@
               </div>
             </div>
             <div class="pb-md-5">
-              <p>Sou nutricionista (CRN 22062), graduada pela Universidade Federal de Minas Gerais (UFMG) em 2015. Em meu trabalho, me dedico a trazer sempre mais saúde para a vida das pessoas através da promoção de uma alimentação equilibrada. Estou sempre em busca de novos conhecimentos e informações, para melhor atender meus pacientes.</p>
-              <p>Minha paixão é ajudar as pessoas a melhorar e evoluir, dentro do que cada um almeja pra si.</p>
+              <p>Me chamo Daniela Marchesini, nasci em Resplendor – MG em 28 de Agosto de 1988. Sou formada em Nutrição (CRN 22062) pela Universidade Federal de Minas Gerais (UFMG). Em meu trabalho, me dedico a trazer sempre mais saúde para a vida das pessoas através de uma alimentação equilibrada. Estou sempre em busca de novos conhecimentos e informações para melhor atender meus pacientes. Minha paixão é ajudar as pessoas a melhorar e evoluir, dentro do que cada um almeja.</p>
+
+              <p>Acredito que o segredo para uma vida saudável é se apaixonar pela alimentação de forma consciente, assim esse processo se torna natural e espontâneo, sem a necessidade de dietas. Meu objetivo é auxiliar meus pacientes a encontrar o seu próprio caminho de evolução, que não só traga resultados, como também permita trazer alegria e prazer em comer bem. Além disso, guia-los nesse processo, trazendo mais consciência e conhecimento para todos que me procuram.</p>
             </div>
           </div>
         </div>
@@ -241,11 +186,157 @@
     </section>
 
 
-    <section id="contact"class="ftco-section contact-section bg-light">
+    <section id="projetos" class="ftco-section bg-light">
+			<div class="container">
+				<div class="row justify-content-center mb-5 pb-3">
+					<div class="col-md-7 heading-section ftco-animate text-center fadeInUp ftco-animated">
+						<h2 class="mb-4">Projetos</h2>
+					</div>
+				</div>
+
+				<div class="row no-gutters ftco-services">
+          <div class="col-md-3 text-center d-flex align-self-stretch ftco-animate project">
+            <div class="media block-6 services mb-md-0 mb-4">
+              <div class="icon bg-color-2 active d-flex justify-content-center align-items-center mb-2">
+            		<img src="https://img.icons8.com/color/48/000000/ingredients.png">
+              </div>
+              <div class="media-body">
+                <h3 class="heading"><a href="projetos.html">Reeducação Alimentar</a></h3>
+              </div>
+            </div>      
+          </div>
+          <div class="col-md-3 text-center d-flex align-self-stretch ftco-animate project">
+            <div class="media block-2 services mb-md-0 mb-4">
+              <div class="icon bg-color-2 d-flex justify-content-center align-items-center mb-2">
+                <img src="https://img.icons8.com/dusk/48/000000/scale.png">
+              </div>
+              <div class="media-body">
+                <h3 class="heading"><a href="projetos.html">Ganho de Peso</a></h3>
+              </div>
+            </div>    
+          </div>
+          <div class="col-md-3 text-center d-flex align-self-stretch ftco-animate project">
+            <div class="media block-6 services mb-md-0 mb-4">
+              <div class="icon bg-color-2 d-flex justify-content-center align-items-center mb-2">
+            		<img src="https://img.icons8.com/officel/48/000000/children.png">
+              </div>
+              <div class="media-body">
+                <h3 class="heading"><a href="projetos.html">Nutrição para Crianças e Adolescentes</a></h3>
+              </div>
+            </div>      
+          </div>
+          <div class="col-md-3 text-center d-flex align-self-stretch ftco-animate project">
+            <div class="media block-6 services mb-md-0 mb-4">
+              <div class="icon bg-color-2 d-flex justify-content-center align-items-center mb-2">
+                <img src="https://img.icons8.com/color/48/000000/pregnant.png">
+              </div>
+              <div class="media-body">
+                <h3 class="heading"><a href="projetos.html">Nutrição para Gestantantes e Lactantes</a></h3>
+              </div>
+            </div>      
+          </div>
+
+          <div class="col-md-3 text-center d-flex align-self-stretch ftco-animate project">
+            <div class="media block-6 services mb-md-0 mb-4">
+              <div class="icon bg-color-2 d-flex justify-content-center align-items-center mb-2">
+                <img src="https://img.icons8.com/officel/48/000000/scalpel.png">
+              </div>
+              <div class="media-body">
+                <h3 class="heading"><a href="projetos.html">Nutrição para pré e pós-operatório</a></h3>
+              </div>
+            </div>      
+          </div>
+
+          <div class="col-md-3 text-center d-flex align-self-stretch ftco-animate project">
+            <div class="media block-6 services mb-md-0 mb-4">
+              <div class="icon bg-color-2 d-flex justify-content-center align-items-center mb-2">
+                <img src="https://img.icons8.com/officel/48/000000/virus.png">
+              </div>
+              <div class="media-body">
+                <h3 class="heading"><a href="projetos.html">Nutrição para o Tratamento e Prevenção de Doenças</a></h3>
+              </div>
+            </div>      
+          </div>
+
+          <div class="col-md-3 text-center d-flex align-self-stretch ftco-animate project">
+            <div class="media block-6 services mb-md-0 mb-4">
+              <div class="icon bg-color-2 d-flex justify-content-center align-items-center mb-2">
+                <img src="https://img.icons8.com/officel/48/000000/elderly-person.png">
+              </div>
+              <div class="media-body">
+                <h3 class="heading"><a href="projetos.html">Nutrição para Idosos</a></h3>
+              </div>
+            </div>      
+          </div>
+
+          <div class="col-md-3 text-center d-flex align-self-stretch ftco-animate project">
+            <div class="media block-6 services mb-md-0 mb-4">
+              <div class="icon bg-color-2 d-flex justify-content-center align-items-center mb-2">
+                <img src="https://img.icons8.com/color/48/000000/bride.png">
+              </div>
+              <div class="media-body">
+                <h3 class="heading"><a href="projetos.html">Nutrição para Noivas</a></h3>
+              </div>
+            </div>      
+          </div>
+
+          <div class="col-md-3 text-center d-flex align-self-stretch ftco-animate project">
+            <div class="media block-6 services mb-md-0 mb-4">
+              <div class="icon bg-color-2 d-flex justify-content-center align-items-center mb-2">
+                <img src="https://img.icons8.com/officel/48/000000/weightlift.png">
+              </div>
+              <div class="media-body">
+                <h3 class="heading"><a href="projetos.html">Nutrição para Ganho de Massa Magra e Hipertrofia</a></h3>
+              </div>
+            </div>      
+          </div>
+
+          <div class="col-md-3 text-center d-flex align-self-stretch ftco-animate project">
+            <div class="media block-6 services mb-md-0 mb-4">
+              <div class="icon bg-color-2 d-flex justify-content-center align-items-center mb-2">
+                <img src="https://img.icons8.com/cute-clipart/48/000000/inspection.png">
+              </div>
+              <div class="media-body">
+                <h3 class="heading"><a href="projetos.html">Consultoria em Nutrição</a></h3>
+              </div>
+            </div>      
+          </div>
+
+        </div>
+			</div>
+		</section>
+
+
+    <section id="servicos" class="ftco-section contact-section bg-light">
       <div class="container">
         <div class="row justify-content-center mb-5 pb-3">
           <div class="col-md-7 heading-section ftco-animate text-center fadeInUp ftco-animated">
-            <h2 class="mb-4">Contato</h2>
+            <h2 class="mb-4">Serviços</h2>
+          </div>
+        </div>
+
+        <div class="row justify-content-center">
+          <div class="col-md-12">
+            <h2 class="mb-4">Atendimento em Consultório</h2>
+            <p>As consultas visam promover conscientização e reeducação alimentar. Após avaliação física, são determinadas as metas e os objetivos de cada paciente, para que um planejamento alimentar personalizado e individualizado, possa ser definido. São também indicados, quando necessário, suplementos vitamínicos, minerais, fitoterápicos ou aminoácidos, de acordo com o objetivo e meta definidos. Outro ponto importante é a sugestão de receitas e indicações de marcas e fornecedores, para que seja mais fácil colocar em prática o plano alimentar. A cada nova consulta, avaliaremos e redefiniremos as novas metas, de acordo com os resultados. Com apoio, muito conversa e troca de informações, será mais fácil incorporar os novos hábitos e acessar de verdade a qualidade de vida.</p>
+          </div>
+        </div>
+
+        <div class="row justify-content-center">
+          <div class="col-md-12">
+            <h2 class="mb-4">Atendimento Domiciliar</h2>
+            <p>O atendimento domiciliar tem o objetivo de oferecer aos pacientes e a seus familiares, a possibilidade de assistência nutricional aliada ao conforto do lar. E também proporciona maior conforto e segurança aos pacientes portadores de doenças crônico-degenerativas.</p>
+          </div>
+        </div>
+      </div>
+    </section>
+
+
+    <section id="parceiros"class="ftco-section contact-section bg-light">
+      <div class="container">
+        <div class="row justify-content-center mb-5 pb-3">
+          <div class="col-md-7 heading-section ftco-animate text-center fadeInUp ftco-animated">
+            <h2 class="mb-4">Parceiros</h2>
           </div>
         </div>
 
@@ -314,6 +405,17 @@
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3757.7072188633756!2d-43.88911478411952!3d-19.639810986767!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xa67c6b46ac9e7b%3A0x222f342a242c4429!2sViviane%20Malafaia%20-%20Nata%C3%A7%C3%A3o%20e%20Hidrogin%C3%A1stica!5e0!3m2!1spt-BR!2sbr!4v1579528247841!5m2!1spt-BR!2sbr" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
           </div>
         </div>
+      </div>
+    </section>
+
+
+    <section id="contato"class="ftco-section contact-section bg-light">
+      <div class="container">
+        <div class="row justify-content-center mb-5 pb-3">
+          <div class="col-md-7 heading-section ftco-animate text-center fadeInUp ftco-animated">
+            <h2 class="mb-4">Contato</h2>
+          </div>
+        </div>
 
         <div class="row block-9">
           <div class="col-md-6 order-md-last info p-4">
@@ -374,9 +476,11 @@
               <h2 class="ftco-heading-2">Menu</h2>
               <ul class="list-unstyled">
                 <li><a href="#" class="py-2 d-block">Home</a></li>
-                <li><a href="#services" class="py-2 d-block">Serviços</a></li>
-                <li><a href="#about" class="py-2 d-block">Sobre</a></li>
-                <li><a href="#contact" class="py-2 d-block">Contato</a></li>
+                <li><a href="#sobre" class="py-2 d-block">Sobre</a></li>
+                <li><a href="#projetos" class="py-2 d-block">Projetos</a></li>
+                <li><a href="#servicos" class="py-2 d-block">Serviços</a></li>
+                <li><a href="receitas.html" class="py-2 d-block">Receitas</a></li>
+                <li><a href="#contato" class="py-2 d-block">Contato</a></li>
               </ul>
             </div>
           </div>
@@ -385,10 +489,8 @@
               <h2 class="ftco-heading-2">Serviços</h2>
               <div class="d-flex">
 	              <ul class="list-unstyled mr-l-5 pr-l-3 mr-4">
-	                <li><a href="#services" class="py-2 d-block">Reeducação Alimentar</a></li>
-	                <li><a href="#services" class="py-2 d-block">Obesidade e Emagrecimento</a></li>
-	                <li><a href="#services" class="py-2 d-block">Ganho de Massa</a></li>
-	                <li><a href="#services" class="py-2 d-block">Atendimento Domiciliar</a></li>
+	                <li><a href="#servicos" class="py-2 d-block">Atendimento em Consultório</a></li>
+	                <li><a href="#servicos" class="py-2 d-block">Atendimento Domiciliar</a></li>
 	              </ul>
 	            </div>
             </div>
@@ -411,6 +513,7 @@
 						  Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="icon-heart color-danger" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
 						  <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
 						</p>
+            <p><a href="https://icons8.com/icon/65859/escala">Icons by Icons8</a></p>
           </div>
         </div>
       </div>
