--- a/receitas.html
+++ b/receitas.html
@@ -71,11 +71,11 @@
 
         <div class="collapse navbar-collapse" id="ftco-nav">
           <ul class="navbar-nav ml-auto">
-            <li class="nav-item active"><a href="index.html" class="nav-link">Home</a></li>
+            <li class="nav-item"><a href="index.html" class="nav-link">Home</a></li>
             <li class="nav-item"><a href="index.html#sobre" class="nav-link">Sobre</a></li>
             <li class="nav-item"><a href="index.html#projetos" class="nav-link">Projetos</a></li>
             <li class="nav-item"><a href="index.html#servicos" class="nav-link">Serviços</a></li>
-            <li class="nav-item"><a href="receitas.html" class="nav-link">Receitas</a></li>
+            <li class="nav-item active"><a href="receitas.html" class="nav-link">Receitas</a></li>
             <li class="nav-item"><a href="index.html#contato" class="nav-link">Contato</a></li>
             <li class="nav-item"><a href="mailto:contato@daninutri.fit?subject=Agendamento de Consulta&body=Olá, tudo bem? Gostaria de agendar um consulta com a Nutri." target="_blank" class="nav-link">Agendar uma Consulta</a></li>
           </ul>
