--- a/projetos.html
+++ b/projetos.html
@@ -71,9 +71,9 @@
 
         <div class="collapse navbar-collapse" id="ftco-nav">
           <ul class="navbar-nav ml-auto">
-            <li class="nav-item active"><a href="index.html" class="nav-link">Home</a></li>
+            <li class="nav-item"><a href="index.html" class="nav-link">Home</a></li>
             <li class="nav-item"><a href="index.html#sobre" class="nav-link">Sobre</a></li>
-            <li class="nav-item"><a href="index.html#projetos" class="nav-link">Projetos</a></li>
+            <li class="nav-item active"><a href="index.html#projetos" class="nav-link">Projetos</a></li>
             <li class="nav-item"><a href="index.html#servicos" class="nav-link">Serviços</a></li>
             <li class="nav-item"><a href="receitas.html" class="nav-link">Receitas</a></li>
             <li class="nav-item"><a href="index.html#contato" class="nav-link">Contato</a></li>
