--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
             <li class="nav-item"><a href="#servicos" class="nav-link">Serviços</a></li>
             <li class="nav-item"><a href="receitas.html" class="nav-link">Receitas</a></li>
 	          <li class="nav-item"><a href="#contato" class="nav-link">Contato</a></li>
-            <li class="nav-item"><a href="mailto:contato@daninutri.fit?subject=Agendamento de Consulta&body=Olá, tudo bem? Gostaria de agendar um consulta com a Nutri." target="_blank" class="nav-link">Agendar uma Consulta</a></li>
+            <li class="nav-item"><a href="mailto:contato@daninutri.fit?subject=Agendamento de Consulta&body=Olá, tudo bem? Gostaria de agendar uma consulta com a Nutri." target="_blank" class="nav-link">Agendar uma Consulta</a></li>
 	        </ul>
 	      </div>
 	    </div>
@@ -359,7 +359,7 @@
             </div>
             <div class="row">
               <div class="col-md-12">
-               <p><span>Email:</span> <a href="mailto:contato@daninutri.fit?subject=Agendamento de Consulta&body=Olá, tudo bem? Gostaria de agendar um consulta com a Nutri." target="_blank">contato@daninutri.fit</a></p>
+               <p><span>Email:</span> <a href="mailto:contato@daninutri.fit?subject=Agendamento de Consulta&body=Olá, tudo bem? Gostaria de agendar uma consulta com a Nutri." target="_blank">contato@daninutri.fit</a></p>
               </div>
             </div>
             <div class="row">
@@ -392,7 +392,7 @@
             </div>
             <div class="row">
               <div class="col-md-12">
-               <p><span>Email:</span> <a href="mailto:contato@daninutri.fit?subject=Agendamento de Consulta&body=Olá, tudo bem? Gostaria de agendar um consulta com a Nutri." target="_blank">contato@daninutri.fit</a></p>
+               <p><span>Email:</span> <a href="mailto:contato@daninutri.fit?subject=Agendamento de Consulta&body=Olá, tudo bem? Gostaria de agendar uma consulta com a Nutri." target="_blank">contato@daninutri.fit</a></p>
               </div>
             </div>
             <div class="row">
@@ -436,7 +436,7 @@
             </div>
             <div class="row">
               <div class="col-md-12">
-               <p><span>Email:</span> <a href="mailto:contato@daninutri.fit?subject=Agendamento de Consulta&body=Olá, tudo bem? Gostaria de agendar um consulta com a Nutri." target="_blank">contato@daninutri.fit</a></p>
+               <p><span>Email:</span> <a href="mailto:contato@daninutri.fit?subject=Agendamento de Consulta&body=Olá, tudo bem? Gostaria de agendar uma consulta com a Nutri." target="_blank">contato@daninutri.fit</a></p>
               </div>
             </div>
             <div class="row">
@@ -501,7 +501,7 @@
             	<div class="block-23 mb-3">
 	              <ul>
 	                <li><a href="tel://31996446591"><span class="icon icon-phone"></span><span class="text">(31) 99644-6591</span></a></li>
-	                <li><a href="mailto:contato@daninutri.fit?subject=Agendamento de Consulta&body=Olá, tudo bem? Gostaria de agendar um consulta com a Nutri." target="_blank">contato@daninutri.fit</span></a></li>
+	                <li><a href="mailto:contato@daninutri.fit?subject=Agendamento de Consulta&body=Olá, tudo bem? Gostaria de agendar uma consulta com a Nutri." target="_blank">contato@daninutri.fit</span></a></li>
 	              </ul>
 	            </div>
             </div>
